# delaunay-triangulation-algorithm

./: .gitignore  Auxilliary.h  CMakeLists.txt  LICENSE  README.md  RusREADME.md  main.cpp
src/: main.cpp  models.cpp  models.hpp  scanline_triangulation.cpp  scanline_triangulation.hpp
test/: test_all.cpp
test/tests/: 001  002  003  004  005
